styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* shadcn/ui */
  @layer base {
    :root {
        --background: 216, 28%, 7%;
        --background-gradient: 216, 28%, 12%;
        --foreground: 216, 28%, 90%;
        
        --card: 222.2 84% 4.9%;
        --card-foreground: 210 40% 98%;
  
        --popover: 222.2 84% 4.9%;
        --popover-foreground: 210 40% 98%;
  
        --primary: 227, 24%, 53%;
        --primary-highlight: 227, 24%, 60%;
        --primary-foreground: 222.2 47.4% 11.2%;
  
        --secondary: 217.2 32.6% 17.5%;
        --secondary-foreground: 210 40% 98%;
  
        --muted: 217.2 32.6% 17.5%;
        --muted-foreground: 215 20.2% 65.1%;
  
        --accent: 217.2 32.6% 17.5%;
        --accent-foreground: 210 40% 98%;
  
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 210 40% 98%;
  
        --border: 227, 24%, 53%;
        --input: 227, 24%, 53%;
        --ring: 212.7 26.8% 83.9%;

      --radius: 0.5rem;
    }
  }

  @layer base {
    * {
      @apply border-border;
    }
    body {
      @apply text-foreground;
    }
  }

/* General */
* {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
}

/* Page layout */
:root {
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
    height: 100%;

    --border-grd1: #cdb164;
    --border-grd2: #c28f00;
    --card-grd1: #08184f;
    --card-grd2: #05060D;
    --card-secondary: #6976a3;
    --card-glow: rgba(110, 97, 67, 0.4);

    --border-blue-grd1: #6976a3;
    --border-blue-grd2: #434a6e;
    --card-blue-grd1: #08184f;
    --card-blue-grd2: #05060D;
    --card-blue-secondary: #6976a3;
    --card-blue-glow: rgba(67, 74, 110, 0.4);

    --border-red-grd1: #a36969;
    --border-red-grd2: #6e4343;
    --card-red-grd1: #4f0808;
    --card-red-grd2: #0d0505;
    --card-red-secondary: #a36969;
    --card-red-glow: rgba(110, 67, 67, 0.4);

    --holmgång-blue: #08184f;
    --holmgång-yellow: #e7c317;
    --holmgång-yellow-secondary: #c28f00;
    --border-radius: 10px;

    --color-background: #0d1117;
    --color-primary: #6976a3;
    --color-link: #525f8f;
    --color-grey: #717274;

    --color-surface: #252629;
    --color-surface-disabled: #111113;
    --color-surface-highlight: #2d2d31;
}

body:has(.default-layout-root) {
    background-color: var(--color-background);
}
body::after {
    content: "";
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
  
    background: radial-gradient(circle at top, hsl(var(--background-gradient)), hsl(var(--background)) 50vw);
}

#root {
    height: 100%;
}

.graphic-layout-root {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.content {
    min-width: 320px;
    min-height: 100vh;
    max-width: 1200px;
    margin: auto;
    padding: 0 20px;

    flex-grow: 1;
    display: flex;
}

/* Pages */

.page {
    flex-grow: 1;
}

.page-config {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 24px
}

.page-config h2 {
    text-align: center;
    /* Same as input boxes */
    width: 442px;
}

.config-input {
    align-items: flex-end;
}

/* General */
a, .link {
    font-weight: 500;
    color: var(--color-link);
    text-decoration: inherit;

    transition: 0.2s all;
}
.link.text-muted-foreground {
    color: hsl(var(--muted-foreground));
}

a:hover, .link:hover {
    color: var(--color-primary-highlight);
}

h1, h2, h3, h4, h5 {
    margin-block-end: 0;
}

/* Input */
.fighter-search-input  {
    border: 1px solid var(--color-primary);
    border-radius: var(--border-radius);
    background-color: var(--color-surface);
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    width: 400px;
    position: relative;
    box-sizing: content-box;

    transition: all 0.2s;
}

.input-wrapper {
    border-radius: var(--border-radius);
    position: relative;
    display: flex;
}

.input-wrapper-shared {
    border: 1px solid var(--color-primary);
    border-radius: var(--border-radius);
}

.input-wrapper-shared button {
    border: none;
}

.input-wrapper-shared input[type="text"] {
    border: none;
    width: unset;
    flex-grow: 1;
}

.input-button-left button,
.input-button-left button::after {
    border-radius: var(--border-radius) 0 0 var(--border-radius);
    border-radius: var(--border-radius) 0 0 var(--border-radius);
}

.input-button-left input[type="text"] {
    border-inline-start: 1px solid var(--color-primary);
    border-radius: 0 var(--border-radius) var(--border-radius) 0;
}

.fighter-search-box .input-wrapper {
    background-color: var(--color-surface);
    border: 1px solid var(--color-primary);
}

.fighter-search-box input[type="text"] {
    border: none;
}

.fighter-search-box>.input-wrapper:has(> input[type="text"]:focus),
.fighter-search-box>.input-wrapper:has(.fighter-search-results-row:focus)
{
    outline: none;
    box-shadow: 0 0 5px 1px var(--color-primary);
}

.fighter-search-box>.input-wrapper {
    flex-direction: column;
    transition: all 0.2s;
}

input:focus {
    outline: none;
}

.input-wrapper:has(> input[type="text"]:disabled),
.input-wrapper:has(> button:disabled),
input[type="text"]:disabled {
    background-color: var(--color-surface-disabled);
    border-color: var(--color-grey);
    cursor: not-allowed;
}

.input-loading {
    display: inline-flex !important;
    position: absolute;
    right: 0;
    height: 100%;
    align-items: center;
    /* width: 30px; */
    /* (17+10+10) = (25 + 7*2) */
    padding: 9px;
}

/* FighterSearchBox */

.fighter-search-box input[type="text"] {
    /* Regular input + label size */
    width: 400px;
}

.fighter-search-results {
    display: flex;
    flex-direction: column;
    max-height: 275px;
    overflow-y: scroll;

    transition: all 0.2s;
}

.fighter-search-results.showHeader {
    border-bottom: none;
}

.fighter-search-results-header {
    color: white;
    padding: 5px 20px;
    font-size: 14px;
    /* Regular input + label size */
    width: 400px;
    cursor: default;
    box-sizing: content-box;

    transition: all 0.2s;
}

.fighter-search-results-row {
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    /* Regular input + label size */
    width: 400px;
    cursor: pointer;
    position: relative;
    box-sizing: content-box;

    transition: all 0.2s;

    display: flex;
    flex-direction: row;
    gap: 5px;
}

.fighter-search-results-row:last-child {
    border-bottom: none;
    border-radius: 0 0 var(--border-radius) var(--border-radius);
}

/* input[type="text"]:hover:not(:disabled),
input[type="number"]:hover, */
.fighter-search-results-row:hover,
.fighter-search-results-row:focus,
.highlight {
    outline: none;
    background-color: var(--color-surface-highlight);
}

input[type="text"].showHeader {
    border-bottom: 0;
    border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.fighter-search-selected-count {
    padding-inline-start: 10px;
}

.fighter-search-selected-list {
    display: flex;
    align-items: center;
    gap: 10px;
    flex-wrap: wrap;
    /* Same as input boxes */
    width: 442px;
}

.fighter-search-selected-list-item {
    display: flex;
    align-items: center;
}

.fighter-search-selected-list-item>span {
    background-color: var(--color-surface);
    padding: 10px 0 10px 10px;
    border-radius: 5px 0 0 5px;
    cursor: default;
    user-select: none;
}

.fighter-search-selected-list-item>i {
    background-color: var(--color-surface);
    color: var(--color-grey);
    padding: 10px;
    line-height: 24px;
    border-radius: 0 5px 5px 0;
    user-select: none;
    cursor: pointer;

    transition: all 0.2s;
}

.fighter-search-selected-list-item>i:hover {
    background-color: var(--color-surface-highlight);
    color: white;
}

/* Helpers */
.vertical-flex {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.horizontal-flex {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.shadow {
    -webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.75);
    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.75);
}

.text-grey {
    color: var(--color-grey);
}

.text-nowrap {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
}

.right {
    position: absolute;
    right: 20px;
}

.hidden {
    visibility: hidden;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #213547;
        background-color: #ffffff;
    }
}

